--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@
         class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-bold italic text-gray-900">About
         </h1>
-        <p class="mb-8 leading-relaxed font-bold">GradeUp Education Institute is Delhi's premier coaching institution
-          for Academic and Competitive Exams. We focused on providing quality education and the best possible results.
-          We focus specifically on the average students and improve their performance through individual attention.</p>
+        <p class="mb-8 leading-relaxed font-bold">I provide you the Best and Quality study material
+          for Academic and Competitive Exams. I focused on providing quality education and the best possible results.</p>
         <div class="flex justify-center">
           <a href="about.html"
             class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-full hover:scale-105 hover:font-bold text-lg">About
@@ -362,7 +361,7 @@
 
       <a class="flex title-font font-medium items-center mt-4  justify-center ">
 
-        <h3 class="text-black  text-sm">© 2022 GradeUp Education Institute | All Rights Reserved </h3>
+        <h3 class="text-black  text-sm">© 2022 PadhaiWithSagar | All Rights Reserved </h3>
 
       </a>
 
