--- a/about.html
+++ b/about.html
@@ -442,7 +442,7 @@
 
       <a class="flex title-font font-medium items-center mt-4  justify-center ">
 
-        <h3 class="text-black  text-sm">© 2022 GradeUp Education Institute | All rights reserved </h3>
+        <h3 class="text-black  text-sm">© 2022 PadhaiWithSagar | All rights reserved </h3>
 
       </a>
 
