--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>GradUp -Contact </title>
-    <link rel="icon" type="image/x-icon" href="images/gradeupimg-removebg-preview.png">
+    <title>PadhaiWithSagar -Contact </title>
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="F7mXJRyaVx5_lbeqv3p7d_xN9Mnh9nzJrtln99uR__E" />
     <meta name="description"
@@ -41,12 +41,12 @@
             d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z">
           </path>
         </svg>
-        <img class="object-contain  h-16 w-125 ml-7 " src="images/gradeupimg-removebg-preview.png" alt="NotFound">
+        <img class="object-contain  h-16 w-125 ml-7 " src="images/logo.png" alt="NotFound">
       </button>
       <div class="collapse navbar-collapse flex-grow items-center" id="navbarSupportedContent">
         <a class="flex items-center  object-fill  mt-2  lg:mt-0  mr-1 " href="#">
-          <!-- <img class="object-contain  h-12 w-96 " src="images//gradeupimg-removebg-preview.png" alt="not found" loading="lazy" /> -->
-          <img class="object-contain  h-16 w-125 " src="images//gradeupimg-removebg-preview.png" alt="not found"
+          <!-- <img class="object-contain  h-12 w-96 " src="images//logo.png" alt="not found" loading="lazy" /> -->
+          <img class="object-contain  h-16 w-125 " src="images//logo.png" alt="not found"
             loading="lazy" />
           
         </a>
@@ -284,7 +284,7 @@
 
       <a class="flex title-font font-medium items-center mt-4  justify-center ">
 
-        <h3 class="text-black  text-sm">© 2022 GradeUp Education Institute | All rights reserved </h3>
+        <h3 class="text-black  text-sm">© 2022 PadhaiWithSagar | All rights reserved </h3>
 
       </a>
 
